--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,8 +1,9 @@
 name: Clojure CI Security
 
 on:
-  schedule:
-    - cron:  "15 * * * *"
+  push:
+  #schedule:
+  #  - cron:  "15 * * * *"
 
 jobs:
   security:
