--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,16 @@ jobs:
         run: clojure -Ttools install nvd-clojure/nvd-clojure '{:mvn/version "RELEASE"}' :as nvd
 
       - name: Verify nvd security
+        id: seguranca
         run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
+
+      - name: Verify success or retry
+        continue-on-error: true
+        id: retry
+        if: always()
+        run: |
+          if ${{ steps.seguranca.exitcode == 1 }}; then
+            clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
+          else if ${{ steps.seguranca.exitcode == 255 }}; then
+            exit 1
+          end
