--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,15 +50,10 @@ jobs:
 
       - name: Retry
         id: retry
-        if: "steps.seguranca.exitcode == 1"
-        run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-
-      - name: Error Success
-        id: security_error
-        if: "steps.seguranca.exitcode == 255"
-        run: exit 255
-
-      - name: Success
-        id: security_ok
-        if: "steps.seguranca.exitcode == 0"
-        run: exit 0
+        run: |
+          if ${{ steps.test.exitcode==1 }}; then
+             clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
+          else
+             exit 0
+          fi
+          
