--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Retry
         id: retry
         run: |
-          if ${{ steps.test.exitcode==1 }}; then
+          if ${{ steps.seguranca.exitcode==1 }}; then
              clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
           else
              exit 0
