--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,12 @@ jobs:
         #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
         run: exit 1
 
+      - name: Check
+        id: seguranca_check
+        continue-on-error: true
+        #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
+        run: echo "${{ steps.seguranca.exitcode }}"
+
       - name: Retry
         id: retry
         run: |
