--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,14 +52,9 @@ jobs:
         id: seguranca_check
         continue-on-error: true
         #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-        run: echo "${{ steps.seguranca.exitcode }}"
+        run: echo "::set-output name=saida::${{ steps.seguranca.exitcode }}"
 
-      - name: Retry
-        id: retry
-        run: |
-          if ${{ steps.seguranca.exitcode==1 }}; then
-             clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-          else
-             exit 0
-          fi
+      - if: steps.seguranca_check.outputs.saida == 1
+        name: Retry
+        run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
           
