--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,8 @@ jobs:
         #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
         run: echo "::set-output name=saida::$?"
 
-      - if: steps.seguranca_check.outputs.saida == 1
-        name: Retry
-        run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
+      - name: Retry
+        #if: steps.seguranca_check.outputs.saida == 1
+        #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
+        run: echo ${{ steps.seguranca_check.outputs.saida }}
           
