--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,16 +46,12 @@ jobs:
         id: seguranca
         continue-on-error: true
         #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-        run: exit 1
-
-      - name: Check
-        id: seguranca_check
-        continue-on-error: true
-        #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-        run: echo "::set-output name=saida::$?"
+        run: |
+          exit 1
+          echo "::set-output name=saida::$?"
 
       - name: Retry
         #if: steps.seguranca_check.outputs.saida == 1
         #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-        run: echo ${{ steps.seguranca_check.outputs.saida }}
+        run: echo ${{ steps.seguranca.outputs.saida }}
           
