--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,23 @@
 name: Clojure CI
 
-# Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
 
 jobs:
-  # This workflow validate a security libraries 
   nvd:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
           lfs: true
 
-      # Setup java
       - name: Setup Java
         uses: actions/setup-java@v1
         with:
           java-version: 11
 
-      # Setup Clojure
       - name: Setup Clojure
         uses: DeLaGuardo/setup-clojure@master
         with:
@@ -38,18 +30,16 @@ jobs:
           key: maven-${{ hashFiles('deps.edn') }}
           restore-keys: |
             maven-
-      # Run tests
+
       - name: Install nvd security
         run: clojure -Ttools install nvd-clojure/nvd-clojure '{:mvn/version "RELEASE"}' :as nvd
 
       - name: Verify nvd security
-        id: seguranca
         continue-on-error: true
-        #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-        run:  |
-          clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"' 2> /tmp/infos.txt 1> /tmp/nvd.txt
+        run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"' 2> /tmp/infos.txt 1> /tmp/nvd.txt          
 
       -name: Verify Result
+        run: |
           $valor = `cat /tmp/nvd.txt | grep "vulnerabilities detected" | grep -Eo '[0-9]+ vulne' | grep -Eo '[0-9]+ ' | head -1`
           echo "error: $valor"
 
