--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,19 +5,25 @@ on:
     branches: [ main ]
 
 jobs:
+  # This workflow validate a security libraries
   nvd:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
         with:
           lfs: true
 
+      # Setup java
       - name: Setup Java
         uses: actions/setup-java@v1
         with:
           java-version: 11
 
+      # Setup Clojure
       - name: Setup Clojure
         uses: DeLaGuardo/setup-clojure@master
         with:
@@ -31,32 +37,9 @@ jobs:
           restore-keys: |
             maven-
 
+      # Run tests
       - name: Install nvd security
         run: clojure -Ttools install nvd-clojure/nvd-clojure '{:mvn/version "RELEASE"}' :as nvd
 
       - name: Verify nvd security
-        continue-on-error: true
-        run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"' 2> /tmp/infos.txt 1> /tmp/nvd.txt          
-
-      -name: Verify Result
-        continue-on-error: true
-        run: |
-          $valor = `cat /tmp/nvd.txt | grep "vulnerabilities detected" | grep -Eo '[0-9]+ vulne' | grep -Eo '[0-9]+ ' | head -1`
-          echo "error: $valor"
-
-      # - name: Retry
-      #   #if: steps.seguranca_check.outputs.saida == 1
-      #   #run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
-      #   run: |
-
-      #     $valor = `cat /tmp/nvd.txt | grep "vulnerabilities detected" | grep -Eo '[0-9]+ vulne' | grep -Eo '[0-9]+ ' | head -1`
-      #     if $valor > 0 ; then
-      #       exit 1
-      #     else
-      #       if $valor = ""; then
-      #         clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"' > /tmp/nvd.txt
-      #       else
-      #         exit 0
-      #       end
-      #     end
-          
+        run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
