--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,8 @@ jobs:
 
       - name: Verify nvd security
         continue-on-error: true
-        run: |
-          clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"' 2> /tmp/infos.txt 1> /tmp/nvd.txt
-          echo " `echo /tmp/nvd.txt`"
+        run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"' 2> /tmp/infos.txt 1> /tmp/nvd.txt
+
+      - name: Output nvd security
+        continue-on-error: true
+        run: echo " `echo /tmp/nvd.txt`"
