--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,7 @@ jobs:
 
       - name: Output nvd security
         continue-on-error: true
-        run: echo " `echo /tmp/nvd.txt`"
+        run: |
+          set -x
+          total=`cat /tmp/nvd.txt | grep "ALL FILES" | grep -Eo '[0-9]+\.[0-9]+' | head -1`
+          echo "Total Security: $total"
