--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,5 +49,5 @@ jobs:
         continue-on-error: true
         run: |
           set -x
-          total=`cat /tmp/nvd.txt | grep "ALL FILES" | grep -Eo '[0-9]+\.[0-9]+' | head -1`
+          total=`cat /tmp/nvd.txt | grep "vulnerabilities detected" | grep -Eo '[0-9]+ vulne' | grep -Eo '[0-9]+ ' | head -1`
           echo "Total Security: $total"
