--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,13 @@ jobs:
         continue-on-error: true
         run: |
           set -x
-          total=`cat /tmp/nvd.txt | grep "vulnerabilities detected" | grep -Eo '[0-9]+ vulne' | grep -Eo '[0-9]+ ' | head -1`
-          echo "$total" | bc
-          
+          total=`cat /tmp/nvd.txt | grep "vulnerabilities detected" | grep -Eo '[0-9]+ vulne' | grep -Eo '[0-9]+ ' | head -1 | bc`
+          if [ "$total" -gt 0 ]; then
+            exit 1;
+          else
+            if [ "$total" -eq 0 ]; then
+              exit 0;
+            else
+              clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"' 2> /tmp/infos.txt 1> /tmp/nvd.txt
+            if
+          fi
