--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,5 +63,5 @@ jobs:
         run: exit 0
 
       - name: Retry
-        if: steps.secoutput.outputs.saida == ""
+        if: steps.secoutput.outputs.saida == ''
         run: clojure -J-Dclojure.main.report=stderr -Tnvd nvd.task/check :classpath '"'"$(clojure -Spath)"'"'
